# psyflo

./: .gitignore  ARCHITECTURE_IMPLEMENTATION_GAPS.md  COMMIT_SUMMARY.md  DATA_PIPELINE_STORAGE_GAPS.md  EVALUATION_GAPS_ANALYSIS.md  EVALUATION_REALITY_CHECK.md  EVALUATION_SUMMARY.md  README.md  extract_pdfs.py
feelwell/: BASELINE_EVAL_GUIDE.md  BASELINE_EVAL_READY.md  EVALUATION_STATUS.md  LLM_INTEGRATION_COMPLETE.md  QUICK_START_BASELINE_EVAL.md  README_LLM_INTEGRATION.md  __init__.py  check_eval_progress.sh  pyproject.toml  requirements-llm.txt  run_baseline_eval.sh
feelwell/docs/: EXECUTION_PLAN.md  IMPLEMENTATION_STATUS.md  llm-implementation-guide.md  llm-improvement-plan.md  metrics_strategy.md
feelwell/evaluation/: README.md  __init__.py  cli.py  runner.py  start_console.py
feelwell/evaluation_results/: feelwell-baseline_20260115_150005.json
feelwell/infrastructure/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
feelwell/scripts/: process_eval_results.py  quick_demo.py  run_baseline_eval.py  run_eval_wrapper.sh  test_setup.py
feelwell/services/: __init__.py
feelwell/shared/: __init__.py
feelwell/visualization/: analytics_service_class.puml  analytics_service_flow.puml  analytics_service_infra.puml  audit_service_class.puml  audit_service_flow.puml  audit_service_infra.puml  crisis_engine_class.puml  crisis_engine_flow.puml  crisis_engine_infra.puml  data_flow.puml  database_schema.puml  deployment_architecture.puml  observer_service_class.puml  observer_service_flow.puml  observer_service_infra.puml  system_overview.puml  (+3 more)
(+214 files in other folders)
