[project]
name = "feelwell"
version = "0.1.0"
description = "Mental health support platform for students"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
evaluation = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
testpaths = ["services"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["services"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
# Safety-critical code requires 100% coverage
fail_under = 80
